# jpdict-backend

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  BACKEND_PLAN.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  log_config.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_dictionary_tables.py  0003_cedict_entries.py  0004_kanji_meanings_ru.py  0005_reibun_entries.py  0006_jmdict_reverse_indexes.py  0007_cedict_reverse_indexes.py  0008_saved_words_srs_state.py  0009_saved_words_first_reviewed_at.py
app/: main.py
app/core/: config.py  deps.py  json_log_formatter.py  rate_limit.py  security.py
app/db/: database.py
app/models/: kanji_cache.py  saved_word.py  search_history.py  user.py
app/routers/: analyze.py  auth.py  history.py  kanji.py  reibun.py  review.py  search.py  vocabulary.py
app/schemas/: analyze.py  auth.py  kanji.py  page.py  reibun.py  review.py  search.py  validators.py  vocabulary.py
app/services/: cache.py  cedict.py  jmdict.py  pinyin.py  reibun.py  srs.py
app/services/nlp/: chinese.py  classifier.py  japanese.py
app/services/search/: normalize.py
data/: eng_sentences.tsv.bz2  hsk.json  jpn_sentences.tsv.bz2  rus_sentences.tsv.bz2  tatoeba_links.tar.bz2
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DATA_SOURCES.md  NLP.md  README.md  RUNBOOK.md  SECURITY.md  STRUCTURE.md
scripts/: import_cedict.py  import_hsk.py  import_jmdict.py  import_kanji_ru.py  import_kanjidic2.py  import_kradfile.py  import_tatoeba.py
tests/: conftest.py  test_analyze.py  test_auth.py  test_chinese.py  test_classifier.py  test_injection.py  test_japanese.py  test_kanji.py  test_normalize.py  test_review.py  test_search.py  test_security.py  test_srs.py  test_vocabulary.py
