[project]
name = "jpdict-backend"
version = "0.1.0"
description = "Backend for JpDict language learning app"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.*",
    "uvicorn[standard]==0.29.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.29.*",
    "alembic==1.13.*",
    "pydantic-settings==2.2.*",
    "python-jose[cryptography]==3.3.*",
    "httpx==0.27.*",
    "cachetools==5.3.*",
    "redis==5.0.*",
    "sudachipy==0.6.*",
    "sudachidict-core",
    "pypinyin==0.51.*",
    "jieba>=0.42.1",
    "bcrypt>=5.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.*",
    "pytest-asyncio==0.23.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
