[project]
name = "jpdict-backend"
version = "0.1.0"
description = "Backend for JpDict language learning app"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.*",
    "uvicorn[standard]==0.29.*",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.29.*",
    "alembic==1.13.*",
    "pydantic-settings==2.2.*",
    "python-jose[cryptography]==3.3.*",
    "httpx==0.27.*",
    "cachetools==5.3.*",
    "redis==5.0.*",
    "sudachipy==0.6.*",
    "sudachidict-core",
    "pypinyin==0.51.*",
    "jieba>=0.42.1",
    "bcrypt>=5.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.*",
    "pytest-asyncio==0.23.*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]
# Deferred: both require behaviour-adjacent code edits, not config — clean up in a
# dedicated PR rather than this docs/tooling pass.
#   B904  — `raise ... from err` inside except
#   UP042 — migrate `class X(str, Enum)` to `enum.StrEnum`
ignore = ["B904", "UP042"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (Depends/Query/...) as argument defaults by design;
# these are not the mutable-default-argument bug B008 warns about.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
]

[tool.mypy]
python_version = "3.11"
files = ["app"]
plugins = ["pydantic.mypy"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

# These libraries ship no type stubs; scope the ignore to them only so mypy
# still flags bad imports of our own modules.
[[tool.mypy.overrides]]
module = ["sudachipy.*", "jieba.*", "pypinyin.*", "cachetools.*", "jose.*"]
ignore_missing_imports = true
